--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
@@ -29,6 +31,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-uploader": "^3.13.0",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
