--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.11",
+    "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.11",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.3",
