--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.2.1",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
