--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
-    "axios": "^1.3.5",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "fetch": "^1.1.0",
     "google-maps-react": "^2.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
