--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "chart.js": "^4.4.0",
     "fetch": "^1.1.0",
     "google-maps-react": "^2.0.6",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
