--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.0",
     "fetch": "^1.1.0",
     "google-maps-react": "^2.0.6",
+    "i18next": "^23.7.7",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "moment": "^2.29.4",
@@ -32,6 +33,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
